--- a/Ticket_management_app/style.css
+++ b/Ticket_management_app/style.css
@@ -93,11 +93,11 @@ body{
 
 .modal-container{
     display: none ;
+    position: fixed ; 
     background-color: black;
     border : black 3px solid ; 
     width: 400px  ;
     padding : 2px ; 
-    position: absolute ; 
     top : 25% ;
     left : calc(50vw - 250px) ; 
     animation: modal 0.6s ;
