--- a/Excel_clone/style.css
+++ b/Excel_clone/style.css
@@ -100,8 +100,8 @@
 .sheets {
     /* background-color : rgb(216, 211, 211) ;  */
     /* align-items: center ; */
-    max-width : calc( 100vw - 120px ) ;
-    min-width : calc( 100vw - 120px ) ;
+    /* max-width : calc( 100vw - 120px ) ; */
+    /* min-width : calc( 100vw - 120px ) ; */
     height: 100% ;
     display : flex ;
     /* align-items: center ; */
@@ -120,7 +120,7 @@
     flex-wrap: nowrap;
     /* padding : 0px 7px ; */
     /* border:1px solid black ;  */
-    transition : all 0.2s ;
+    /* transition : all 0.2s ; */
 }
 
 .sheet:hover {
