menu icons made functional

--- a/Excel_clone/style.css
+++ b/Excel_clone/style.css
@@ -68,10 +68,12 @@
     align-items : center ;
     padding : 0px 10px;
     transition : all 0.2s ;
+    margin : 0px 2px ; 
+    border-radius: 5px;
 }
 
 .menu-icon:hover {
-    background-color: lightgray;
+    background-color: rgb(190, 190, 190) ;
     cursor: pointer;
 }
 
@@ -168,10 +170,10 @@
 .cell-container{
     position: relative ; 
     overflow: auto;
-    height : calc( 100vh  - 152px )
+    height : calc( 100vh  - 152px ) ; 
 }
 .all-cells {
-    background: lightgray;
+    background: rgb(236, 230, 230);
     position:absolute ; 
     left : 30px ; 
     top:25px;
@@ -223,4 +225,8 @@
     width: 30px ; 
     height : 25px ; 
     border : 1px solid lightgray ; 
+}
+
+.active-menu-icon{
+    background: rgb(190, 190, 190) ;    
 }
